--- a/src/PHP EX2/mycss.css
+++ b/src/PHP EX2/mycss.css
@@ -54,10 +54,40 @@ body {
       font-size: -webkit-xxx-large;
   }
   .footer{
-    background-color: #82837B;
-    height: 5%;
-    color: white;
-    position:absolute;
+    position: static;    
+    bottom:0;
+    left: 0;     
     width:100%;
-    bottom:0px;
+    background-color: #82837B;
+    color: white;
+    text-align: center;
+    padding: 15px;
+
   }
+
+
+
+
+
+.php {
+    width: 100%;
+    
+    margin-top: 20px; 
+}
+
+.php th, 
+.php td {
+    border: 1px solid #000000;
+    padding: 8px;
+    text-align: left;
+}
+
+.php th {
+    background-color: #ffffff;
+}
+
+.php tr {
+    background-color: #ffffff;
+}
+
+
